<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="wrap_content"
    android:layout_width="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="com.zendesk.sample.MainActivity$PlaceholderFragment">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_contact"
            android:id="@+id/main_btn_contact" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/main_btn_request_list"
            android:id="@+id/main_btn_request_list" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/main_edittext_support"
            android:hint="@string/main_edittext_support_hint" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/main_btn_support"
            android:text="@string/main_btn_helpcenter" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/main_edittext_push"
            android:hint="@string/main_edittext_push_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_btn_push_register"
                android:id="@+id/main_btn_push_register" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_btn_push_register_ua"
                android:id="@+id/main_btn_push_register_ua" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_btn_push_unregister"
                android:id="@+id/main_btn_push_unregister" />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:id="@+id/main_edittext_user_tags"
            android:hint="@string/main_edittext_tags" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_btn_add_tags"
                android:id="@+id/main_btn_user_tags_add" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/main_btn_remove_tags"
                android:id="@+id/main_btn_user_tags_remove" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
